2009-07-31  Xan Lopez  <xlopez@igalia.com>

Reviewed by Mark Rowe.

        Fix compiler warning.
        https://bugs.webkit.org/show_bug.cgi?id=27851

        GCC does not like multi-character character constants, so use the
        explicit numerical value of 'BM' in the enum.

        * platform/image-decoders/bmp/BMPImageDecoder.cpp:
        (WebCore::BMPImageDecoder::processFileHeader):

Canonical link: https://commits.webkit.org/38232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46626 268f45cc-cd09-0410-ab3c-d52691b4dbfc